--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,6 @@ dependencies {
     // 依赖注入
     apt 'com.jakewharton:butterknife-compiler:8.1.0'
     compile 'com.jakewharton:butterknife:8.1.0'
-//    compile project(':library')
-    compile(name:'library-debug', ext:'aar')
+    compile project(':library')
+//    compile(name:'library-debug', ext:'aar')
 }
